--- a/src/app/public-module/register-form/register-form.component.html
+++ b/src/app/public-module/register-form/register-form.component.html
@@ -1,140 +1,59 @@
-<!-- Déclenchement OnSubmit() lors le formulaire est soummis -->
-<!-- 
-    -> ngSubmit = Evemenement de soumission du formulaire
-    -> registerForm : on crée ici une variable référencée dans le template à laquelle
-    on attribut le résultat de la directive ngForm : cette variable devient alors
-    on objet géré par angular qui permet d'avoir accès a plein de fonctionnalités
-    -> Le même mécanisme est appliqué pour la variable référencée pseudo
-    -> Les champs bénéficient des classes css automatique (voir fichier css du composant) ng-valid
-    et ng-invalid, que l'on peut personnaliser en fonction de l'état du champ (respect des pattern, pristine...)
- -->
-<form 
-  (ngSubmit)="onSubmitRegister()" 
-  #registerForm="ngForm" 
-  [hidden] = "this.activation_success">
-  <div [hidden]="!pseudo.pristine" class="is-hidden">RAS</div>
-  <div [hidden]="!pseudo.valid" class="is-hidden">RAS</div>
-  <div [hidden]="pseudo.valid || pseudo.pristine" class="text-danger">
-    Longueur pseudonyme ou présence d'un caractère invalide
-  </div>
-  <div class="input-group input-group-sm mb-3 mx-auto">
-    <span class="input-group-text" id="inputGroup-sizing-sm">Pseudonyme</span>
-    <input
-      type="text"
-      class="form-control"
-      id="pseudo"
-      aria-describedby="inputGroup-sizing-sm"
-      required
-      pattern="^[a-zA-Z0-9!@#$%^&*()_+=-{}[\]:;<>?,./~|]{0,25}$"
-      [(ngModel)]="this.pseudonyme"
-      name="pseudo"
-      #pseudo="ngModel"
-    />
-  </div>
-
-  <div [hidden]="!emailA.pristine" class="is-hidden">RAS</div>
-  <div [hidden]="!emailA.valid" class="is-hidden">RAS</div>
-  <div [hidden]="emailA.valid || emailA.pristine" class="text-danger">
-    Email requis ou invalide
-  </div>
-  <div class="input-group input-group-sm mb-3 mx-auto">
-    <span class="input-group-text" id="inputGroup-sizing-sm">Email</span>
-    <input
-      type="text"
-      class="form-control"
-      id="email"
-      aria-describedby="inputGroup-sizing-sm"
-      required
-      pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
-      [(ngModel)]="this.username"
-      name="email"
-      #emailA="ngModel"
-    />
-  </div>
-
-  <!-- Security rules : at least one uppercase letter, one lowercase letter, one number, and one special character, and has a length of between 8 and 12 characters -->
-  <div [hidden]="!pwdA.pristine" class="is-hidden">RAS</div>
-  <div [hidden]="!pwdA.valid" class="is-hidden">RAS</div>
-  <div [hidden]="pwdA.valid || pwdA.pristine" class="text-danger">
-    Mot de passe requis ou invalide
-  </div>
-  <div class="input-group input-group-sm mb-3 mx-auto">
-    <span class="input-group-text" id="inputGroup-sizing-sm">Mot de Passe</span>
-    <input
-      type="password"
-      class="form-control"
-      id="pwd"
-      aria-describedby="inputGroup-sizing-sm"
-      required
-      pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}"
-      [(ngModel)]="this.password"
-      name="password"
-      #pwdA="ngModel"
-    />
-  </div>
-  <div class="d-flex flex-grow-0 justify-content-center">
-    <button
-      type="submit"
-      class="mt-2 btn btn-secondary ms-lg-auto border border-white"
-      [disabled]="!registerForm.form.valid"
-      [hidden]="this.registering_success"
-    >
-      Continuer
+<div [ngSwitch]="this.globalSuccessState">
+  <div *ngSwitchCase=true>
+    <p>Votre compte est à présent activé. Vous pouvez dès lors vous y connecter en cliquant sur le bouton suivant:</p>
+    <button type="button" (click)="this.onLogin()" class="mt-2 btn btn-secondary ms-lg-auto border border-white">
+      Se connecter
     </button>
   </div>
-  <div [ngSwitch]="this.registerResponseStatus" class="mt-4">
-    <div *ngSwitchCase="201" class="text-white">
-      Entrez SVP le code d'activation envoyé à l'adresse email fournie
-      <form (ngSubmit)="onSubmitActivation()" #registerFormActivation="ngForm">
-        <div [hidden]="!code_activation.pristine" class="is-hidden">RAS</div>
-        <div [hidden]="!code_activation.valid" class="is-hidden">RAS</div>
-        <div [hidden]="code_activation.valid || code_activation.pristine" class="text-danger">
-          Le code est doit être une suite de 6 digits
-        </div>
-        <div class="input-group input-group-sm mb-3 mx-auto">
-          <span class="input-group-text" id="inputGroup-sizing-sm">Code d'activation</span>
-          <input
-            type="text"
-            class="form-control"
-            id="activation"
-            aria-describedby="inputGroup-sizing-sm"
-            required
-            pattern="[0-9]{6}$"
-            [(ngModel)]="this.activationcode"
-            name="activation"
-            #code_activation="ngModel"
-          />
-        </div>
-        <div class="d-flex flex-grow-0 justify-content-center">
-          <button
-            type="submit"
-            class="mt-2 btn btn-secondary ms-lg-auto border border-white"
-            [disabled]="!registerFormActivation.form.valid"
-            [hidden]="this.activation_success"
-          >
-            Envoyer le code
-          </button>
-        </div>
-        <div [ngSwitch]="this.activationResponseStatus" class="mt-4">
-          <div *ngSwitchCase="200" class="text-white"> activation OK</div>
-          <div *ngSwitchDefault class="text-danger">
-            <strong>{{ this.activationResponseMsgToDisplay }}</strong>
+
+  <div *ngSwitchDefault>
+
+    <form (ngSubmit)="onSubmitRegister()" #registerForm="ngForm">
+      <!--  PSEUDO FIELD -->
+      <div class="input-group input-group-sm mb-3 mx-auto">
+        <span class="input-group-text" id="inputGroup-sizing-sm">Pseudonyme</span>
+        <input type="text" class="form-control" id="pseudo" aria-describedby="inputGroup-sizing-sm" required
+          pattern="^[a-zA-Z0-9!@#$%^&*()_+=-{}[\]:;<>?,./~|]{0,25}$" [(ngModel)]="this.pseudonyme" name="pseudo"
+          #pseudo="ngModel" />
+      </div>
+
+      <!-- EMAIL FIELD -->
+      <div class="input-group input-group-sm mb-3 mx-auto">
+        <span class="input-group-text" id="inputGroup-sizing-sm">Email</span>
+        <input type="text" class="form-control" id="email" aria-describedby="inputGroup-sizing-sm" required
+          pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" [(ngModel)]="this.username" name="email"
+          #emailA="ngModel" />
+      </div>
+
+      <!-- PASSWORD FIELD -->
+      <div class="input-group input-group-sm mb-3 mx-auto">
+        <span class="input-group-text" id="inputGroup-sizing-sm">Mot de Passe</span>
+        <input type="password" class="form-control" id="pwd" aria-describedby="inputGroup-sizing-sm" required
+          pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.password" name="password" #pwdA="ngModel" />
+      </div>
+
+      <div class="d-flex flex-grow-0 justify-content-center">
+        <button type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white" data-bs-toggle="modal"
+          data-bs-target="#staticBackdrop" [disabled]="!registerForm.form.valid" [hidden]="this.registering_success">
+          Continuer
+        </button>
+      </div>
+
+      <!-- ACTIVATE USER MODAL -->
+      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true" >
+        <div class="modal-dialog modal-dialog-centered">
+
+          <!-- Start of modal content -->
+          <div class="d-flex flex-column align-items-center modal-content bg-success" >
+            <button (click)="onCloseModal()" type="button" class="btn-close align-self-end" data-bs-dismiss="modal"
+              aria-label="Close"></button>
+            <app-activate-user-form class="p-4" [emailWhereCodeSended]="this.username" [errorMsg]="this.errorMsgToSend" [step]="this.activateUserStep">
+            </app-activate-user-form>
           </div>
+          <!-- End of modal content -->
         </div>
-      </form>
-      
-    </div>
-    <div *ngSwitchDefault class="text-danger">
-      <strong>{{ this.registerResponseMsgToDisplay }}</strong>
-    </div>
+      </div>
+    </form>
   </div>
-</form>
-<p [hidden]="!this.activation_success">Votre compte inote est à présent activé et vous pouvez dès lors vous y connecter</p>
-<button
-    type="button"
-    (click)="onGoToHome()"
-    class="mt-2 btn btn-secondary ms-lg-auto border border-white"
-    [hidden]="!this.activation_success"
-  >
-    Revenir à l'accueil
-  </button>
+</div>
