--- a/src/app/public-module/register-with-popup/register-with-popup.component.html
+++ b/src/app/public-module/register-with-popup/register-with-popup.component.html
@@ -2,10 +2,10 @@
     <div class="container ">
         <div class="row row-cols-1 row-cols-lg-2 align-items-center">
             <div class="col display-6 h1">
-                <h1>Connexion</h1>
+                <h1>Inscription</h1>
             </div>
             <div class="col p-3 ">
-                <app-login-form-component></app-login-form-component>
+               <app-register-form-component></app-register-form-component>
             </div>
         </div>
     </div>
