modals starting functionnal. code need to be cleaned

--- a/src/app/public-module/register/register.component.html
+++ b/src/app/public-module/register/register.component.html
@@ -3,7 +3,8 @@
         <div class="row row-cols-1 row-cols-lg-2 align-items-center">
             <div class="col display-6 h1"><h1>Création de compte</h1></div>
             <div class="col p-3 ">
-                <app-register-form-component></app-register-form-component>
+                
+                <app-modal-component></app-modal-component>
             </div>
         </div>
     </div>
