--- a/src/app/public-module/register-form/register-form.component.html
+++ b/src/app/public-module/register-form/register-form.component.html
@@ -1,10 +1,11 @@
-<div [ngSwitch]="this.globalSuccessState">
+<div [ngSwitch]="this.activation_success">
   <div *ngSwitchCase=true>
     <p>Votre compte est à présent activé. Vous pouvez dès lors vous y connecter en cliquant sur le bouton suivant:</p>
     <button type="button" (click)="this.onLogin()" class="mt-2 btn btn-secondary ms-lg-auto border border-white">
       Se connecter
     </button>
   </div>
+
 
   <div *ngSwitchDefault>
 
@@ -33,27 +34,12 @@
       </div>
 
       <div class="d-flex flex-grow-0 justify-content-center">
-        <button type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white" data-bs-toggle="modal"
-          data-bs-target="#staticBackdrop" [disabled]="!registerForm.form.valid" [hidden]="this.registering_success">
+        <button  type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white" 
+          [disabled]="!registerForm.form.valid">
           Continuer
         </button>
       </div>
-
-      <!-- ACTIVATE USER MODAL -->
-      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true" >
-        <div class="modal-dialog modal-dialog-centered">
-
-          <!-- Start of modal content -->
-          <div class="d-flex flex-column align-items-center modal-content bg-success" >
-            <button (click)="onCloseModal()" type="button" class="btn-close align-self-end" data-bs-dismiss="modal"
-              aria-label="Close"></button>
-            <app-activate-user-form class="p-4" [emailWhereCodeSended]="this.username" [errorMsg]="this.errorMsgToSend" [step]="this.activateUserStep">
-            </app-activate-user-form>
-          </div>
-          <!-- End of modal content -->
-        </div>
-      </div>
+      <app-modal-component (valueChange)="handleValueChange($event)"></app-modal-component>
     </form>
   </div>
 </div>
