--- a/src/app/public-module/register-form/register-form.component.html
+++ b/src/app/public-module/register-form/register-form.component.html
@@ -1,4 +1,5 @@
 <div [ngSwitch]="this.activation_success">
+
   <div *ngSwitchCase=true>
     <p>Votre compte est à présent activé. Vous pouvez dès lors vous y connecter en cliquant sur le bouton suivant:</p>
     <button type="button" (click)="this.onLogin()" class="mt-2 btn btn-secondary ms-lg-auto border border-white">
@@ -6,10 +7,8 @@
     </button>
   </div>
 
-
   <div *ngSwitchDefault>
-
-    <form (ngSubmit)="onSubmitRegister()" #registerForm="ngForm">
+  <form (ngSubmit)="onSubmitRegister()" #registerForm="ngForm">
       <!--  PSEUDO FIELD -->
       <div class="input-group input-group-sm mb-3 mx-auto">
         <span class="input-group-text" id="inputGroup-sizing-sm">Pseudonyme</span>
@@ -34,12 +33,14 @@
       </div>
 
       <div class="d-flex flex-grow-0 justify-content-center">
-        <button  type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white" 
+        <button type="submit" class="mt-2 btn btn-secondary ms-lg-auto border border-white"
           [disabled]="!registerForm.form.valid">
           Continuer
         </button>
       </div>
-      <app-modal-component (valueChange)="handleValueChange($event)"></app-modal-component>
+
+      <!-- Activation modal windows -->
+      <app-modal-component (valueChange)="actOnSuccessEmitedByChild($event)"></app-modal-component>
     </form>
   </div>
 </div>
