--- a/src/app/shared-module/footer-component/footer.component.html
+++ b/src/app/shared-module/footer-component/footer.component.html
@@ -1,24 +1,35 @@
 <footer>
-    <div class="container-fluid bg-body-tertiary ">
-        <div class="row">
-            <div class="col-md-6 ">
-                <h3>{{this.lang.pickMsg(this.siteSectionsPath)}}</h3>
-                <ul>
-                    <li><em class="bx bx-chevron-right"></em> <a class="text-decoration-none text-black-50 inote-link-normal">{{this.lang.pickMsg(this.contactPath)}}</a></li>
-                    <li><em class="bx bx-chevron-right"></em> <a class="text-decoration-none text-black-50 inote-link-normal">{{this.lang.pickMsg(this.termsAndConditionsPath)}}</a></li>
-                    <li><em class="bx bx-chevron-right"></em> <a class="text-decoration-none text-black-50 inote-link-normal">{{this.lang.pickMsg(this.privacyAndSecurityPath)}}</a></li>
-                    <li><em class="bx bx-chevron-right"></em> <a class="text-decoration-none text-black-50 inote-link-normal">{{this.lang.pickMsg(this.cookiesPath)}}</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-4 col-md-6 justify-content-around ">
-                <h4>{{this.lang.pickMsg(this.followUsPath)}}</h4>
-                <div class="mt-3">
-                    <a class="linkedin"><em class="bx bxl-linkedin text-black-50 inote-link-normal"></em></a>
-                    <a class="twitter"><em class="bx bxl-twitter text-black-50 inote-link-normal"></em></a>
-                    <a class="instagram"><em class="bx bxl-instagram text-black-50 inote-link-normal"></em></a>
-                    <a class="facebook"><em class="bx bxl-facebook text-black-50 inote-link-normal"></em></a>
-                  </div>
-            </div>
-        </div>
-    </div>
+<div
+    class="container-fluid d-lg-flex flex-lg-row justify-content-lg-around flex-md-column d-md-flex align-items-md-center flex-sm-column d-sm-flex align-items-sm-center">
+    <section class="d-flex flex-column align-items-center justify-content-center">
+        <h4>{{this.lang.pickMsg(this.siteSectionsPath)}}</h4>
+        <ul class="inote-list-without-points gap-2 d-lg-flex flex-lg-row justify-content-lg-center flex-md-column d-md-flex align-items-md-center flex-sm-column d-sm-flex align-items-sm-center">
+            <li>
+                <a
+                    class="text-center inote-small-comment text-decoration-none text-black-50 inote-link-normal">{{this.lang.pickMsg(this.contactPath)}}</a>
+            </li>
+            <li> <a
+                    class="text-center inote-small-comment text-decoration-none text-black-50 inote-link-normal">{{this.lang.pickMsg(this.termsAndConditionsPath)}}</a>
+            </li>
+            <li> <a
+                    class="inote-small-comment text-decoration-none text-black-50 inote-link-normal">{{this.lang.pickMsg(this.privacyAndSecurityPath)}}</a>
+            </li>
+            <li> <a
+                    class=" inote-small-comment text-decoration-none text-black-50 inote-link-normal">{{this.lang.pickMsg(this.cookiesPath)}}</a>
+            </li>
+        </ul>
+    </section>
+
+    <section class="d-flex flex-column align-items-center">
+        <h4>{{this.lang.pickMsg(this.followUsPath)}}</h4>
+        <ul class="inote-list-without-points gap-lg-2  gap-sm-4 d-flex ">
+            <li> <a class="inote-link-normal text-black-50"><fa-icon [icon]="faInstagram"></fa-icon></a></li>
+            <li> <a class="inote-link-normal text-black-50"><fa-icon [icon]="faLinkedin"></fa-icon></a></li>
+            <li> <a class="inote-link-normal text-black-50"><fa-icon [icon]="faFacebook"></fa-icon></a></li>
+            <li> <a class="inote-link-normal text-black-50"><fa-icon [icon]="faTwitter"></fa-icon></a></li>
+        </ul>
+    </section>
+</div>
+<p class="text-center inote-small-comment"><strong>Inote&copy;</strong> - {{this.currentDate}} -
+    {{this.lang.pickMsg(this.allReservedRightsPath)}}</p>
 </footer>
