Update modal forgotten password in progress

--- a/src/app/protected-module/shared-protected-module/protected-nav-component/protected-nav.component.html
+++ b/src/app/protected-module/shared-protected-module/protected-nav-component/protected-nav.component.html
@@ -41,7 +41,7 @@
       </ul>
       <app-language-selector></app-language-selector>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" type="search" placeholder="{{this.lang.pickMsg(this.searchPath)}}" aria-label="Search">
         <button class="btn btn-secondary border border-white"
           type="submit">{{this.lang.pickMsg(this.searchPath)}}</button>
       </form>
