--- a/src/app/public-module/shared-public-module/modals/modal-forgotten-password/modal-forgotten-password.component.html
+++ b/src/app/public-module/shared-public-module/modals/modal-forgotten-password/modal-forgotten-password.component.html
@@ -11,17 +11,38 @@
       </div>
 
       <!-- Specific content -->
-      <form #toto="ngForm">
+      <form #changePassword="ngForm">
+
+        <!-- Authentication code -->
         <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
           <span class="d-flex flex-column input-group-text" id="inputGroup-sizing-sm">{{this.lang.pickMsg(this.authenticationCodePath)}}</span>
-          <input type="text" class="form-control" id="activation" aria-describedby="inputGroup-sizing-sm" required
-            pattern="[0-9]{6}$" [(ngModel)]="this.activationCode" name="activation" #code_activation="ngModel"
+          <input type="text" class="form-control" id="authentication" aria-describedby="inputGroup-sizing-sm" required
+            pattern="[0-9]{6}$" [(ngModel)]="this.authenticationCode" name="authentication" #code_authentication="ngModel"
             placeholder={{this.lang.pickMsg(this.enterCodePath)}} />
         </div>
-        <button (click)="onSendAuthCode()" type="button" class="mt-2 btn btn-secondary border border-white"
-          [disabled]="!toto.valid">
-          {{this.lang.pickMsg(this.sendCodePath)}}
-        </button>
+        
+        <div class="d-flex flex-column">
+          <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+            <span class="input-group-text" id="inputGroup-sizing-sm">{{this.lang.pickMsg(this.passwordPath)}}</span>
+            <input type="password" class="form-control" id="newPwdId" aria-describedby="inputGroup-sizing-sm" required
+              pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.newPassword" name="newPwdField"
+              #new_pwd_model="ngModel" placeholder={{this.lang.pickMsg(this.enterNewPasswordPath)}}
+              [disabled]="!code_authentication.valid" />
+          </div>
+
+          <div class="align-items-center input-group input-group-sm mb-3 mx-auto">
+            <span class="input-group-text" id="inputGroup-sizing-sm">Confirmation</span>
+            <input type="password" class="form-control" id="confirmPwdId" aria-describedby="inputGroup-sizing-sm"
+              required pattern="[a-zA-Z0-9!@#$%^&*_=+-]{8,12}" [(ngModel)]="this.confirmedPassword"
+              name="confirmedPwdField" #confirmed_pwd_model="ngModel" placeholder="{{this.lang.pickMsg(this.confirmNewPasswordPath)}}"
+              [disabled]="!new_pwd_model.valid" />
+          </div>
+          <!-- <p [ngClass]="!this.newPasswordResponseStatus ? 'text-danger':'text-white'" >{{this.newPasswordResponseMsgToDisplay}}</p> -->
+          <button (click)="onSendnewPwd()" type="button" class="mt-2 btn btn-secondary border border-white"
+            [disabled]="this.newPassword !== this.confirmedPassword || !this.newPassword">
+            {{this.lang.pickMsg(this.sendNewPasswordPath)}}
+          </button>
+        </div>
       </form>
 
     </div>
