basic user recuperation mechanism ok

--- a/src/app/protected-module/shared-protected-module/protected-nav-component/protected-nav.component.html
+++ b/src/app/protected-module/shared-protected-module/protected-nav-component/protected-nav.component.html
@@ -17,7 +17,7 @@
           class="img-fluid rounded-circle  border border border-secondary-subtle" id="user-profile">
       </a>
       <ul class="dropdown-menu dropdown-menu-end">
-        <div class="ms-1 me-1 fw-bold ">{{this.currentConnectUser?.pseudo}}</div>
+        <div class="ms-1 me-1 fw-bold ">{{this.currentConnectUser?.pseudonyme}}</div>
         <div class="ms-1 me-1 text-success fw-bold  fs-6 fst-italic ">{{this.currentConnectUser?.username}}</div>
         <li>
           <hr class="dropdown-divider">
