--- a/src/app/protected-module/user-management-component/user-management.component.html
+++ b/src/app/protected-module/user-management-component/user-management.component.html
@@ -1,4 +1,4 @@
-<app-protected-nav-component></app-protected-nav-component>
-<app-user></app-user>
-
-
+<div class="bg-success bg-gradient fullPageHeight_withNavBar">
+    <app-protected-nav-component></app-protected-nav-component>
+   <app-user [username]="this.usernameToSend" class=""></app-user>
+</div>
