--- a/src/app/protected-module/shared-protected-module/user-module/user/user.component.html
+++ b/src/app/protected-module/shared-protected-module/user-module/user/user.component.html
@@ -1,26 +1,14 @@
-<div *ngIf='user'
-    class="d-flex flex-row border border-secondary shadow rounded w-50 p-4 ms-auto me-auto align-items-center" id="user-bloc">
-    <img [src]="user.picture" alt="user img profile" class="img-fluid me-4">
-    <div class="d-flex flex-column flex-wrap">
-        <h1 class="m-0 bg-light">{{user.pseudo}}</h1>
-        <h2 class="m-0">{{user.firstName}} {{user.lastName}}</h2>
-        <p class="m-0">{{user.email}}</p>
-        <p class="m-0">{{user.phone}}</p>
-        <p class="m-0">{{user.job}}</p>
-        <p class="m-0"><em>membre depuis le {{user.subscriptionDate|date:'dd/MM/yyyy'}}</em></p>
-        <p class="m-0">Biographie </p>
-        <div class="overflow-auto p-3 bg-light border border-primary rounded" id="biography">
-            {{user.biography}}
-        </div>
-        <hr />
-        <div class="d-flex flex-row justify-content-evenly" id="result-text">
-            <a (click)="goToUserList()" class="text-success" appBorderMouseNoInitialColorDirective>RETOUR</a>
-            <a (click)="gotToEditUser(user)" class="text-warning" appBorderMouseNoInitialColorDirective="#ffc107">EDITER</a>
-            <a (click)="deleteUser(user)" class="text-danger" appBorderMouseNoInitialColorDirective="#dc3545">SUPPRIMER</a>
+<div *ngIf='this.publicUserResponseDto' class="container text-center">
+    <div class="row">
+        <div class="col-2 bg-white border border-black border-2 rounded shadow">
+            <div class="d-flex flex-column p-3 align-items-center">
+                <div><strong>{{this.publicUserResponseDto.pseudonyme}}</strong></div>
+                <div>{{this.publicUserResponseDto.username}}</div>
+            </div>
         </div>
     </div>
 </div>
 
-<div *ngIf="!user" class="d-flex">
+<div *ngIf="!this.publicUserResponseDto" class="d-flex">
     <app-spin-loader-component class="ms-auto me-auto" id="no-user"></app-spin-loader-component>
 </div>
