--- a/src/app/protected-module/shared-protected-module/user-module/user/user.component.html
+++ b/src/app/protected-module/shared-protected-module/user-module/user/user.component.html
@@ -1,9 +1,29 @@
 <div *ngIf='this.publicUserResponseDto' class="container text-center">
     <div class="row">
         <div class="col-2 bg-white border border-black border-2 rounded shadow">
-            <div class="d-flex flex-column p-3 align-items-center">
-                <div><strong>{{this.publicUserResponseDto.pseudonyme}}</strong></div>
-                <div>{{this.publicUserResponseDto.username}}</div>
+            <div class="d-flex flex-column p-1 align-items-center">
+
+                <a class="d-flex justify-content-end" data-toggle="tooltip" data-placement="bottom" title={{this.lang.pickMsg(this.toolTips_teamsPath)}}>
+                    <img src="../assets/team.svg" alt="team logo" class=" image w-25  align-self-end inote-link-normal">
+                </a>
+
+                <div class=" mt-2">
+                    <a class="d-flex flex-column align-items-center inote-link-normal text-success" data-toggle="tooltip" data-placement="bottom"
+                        title={{this.lang.pickMsg(this.toolTips_editPath)}}>
+                        <img src="../assets/user.svg" alt="user profile img"
+                            class="w-50 mb-3 img-fluid rounded-circle  border border border-secondary-subtle"
+                            id="user-profile">
+                        <div><strong>{{this.publicUserResponseDto.pseudonyme}}</strong></div>
+                        <div>{{this.publicUserResponseDto.username}}</div>
+                    </a>
+                </div>
+                <div class="mt-3 mb-3 d-flex justify-content-center gap-2">
+                    <a class="d-flex" data-toggle="tooltip" data-placement="bottom" title={{this.lang.pickMsg(this.toolTips_deletePath)}}>
+                        <img src="../assets/trash.svg" alt="team logo" class="w-50 inote-link-normal ms-auto"></a>
+
+                    <a class="d-flex" data-toggle="tooltip" data-placement="bottom" title={{this.lang.pickMsg(this.toolTips_changeRolePath)}}>
+                        <img src="../assets/user-role.svg" alt="team logo" class="w-50 inote-link-normal me-end"></a>
+                </div>
             </div>
         </div>
     </div>
