--- a/src/app/protected-module/user-management-component/user-management.component.html
+++ b/src/app/protected-module/user-management-component/user-management.component.html
@@ -1,4 +1,8 @@
-<div class="bg-success bg-gradient fullPageHeight_withNavBar">
+<div class="bg-success bg-gradient page">
     <app-protected-nav-component></app-protected-nav-component>
-   <app-user [username]="this.usernameToSend" class=""></app-user>
+    <ul class="d-flex flex-wrap p-3 gap-3 justify-content-center align-items-center inote-list-without-points">
+        <li *ngFor="let user of users" class="">
+            <app-user [username]="user.email" class=""></app-user>
+        </li>
+    </ul>
 </div>
